--- a/find.html
+++ b/find.html
@@ -89,7 +89,7 @@
                                 <div class="friends__List__Friends__Box__left">
                                     <div class="friends__List__Friends__Box__left__Img lot"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">롯데리아</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name plusname">롯데리아</div>
 
                                     </div>
                                 </div>
@@ -105,7 +105,7 @@
                                 <div class="friends__List__Friends__Box__left">
                                     <div class="friends__List__Friends__Box__left__Img spao"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">스파오</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name plusname">스파오</div>
 
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@
                                 <div class="friends__List__Friends__Box__left">
                                     <div class="friends__List__Friends__Box__left__Img zara"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">자라</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name plusname">자라</div>
 
                                     </div>
                                 </div>
@@ -137,7 +137,7 @@
                                 <div class="friends__List__Friends__Box__left">
                                     <div class="friends__List__Friends__Box__left__Img olive"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">올리브영</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name plusname">올리브영</div>
 
                                     </div>
                                 </div>
