--- a/friends.html
+++ b/friends.html
@@ -88,7 +88,7 @@
                                 <div class="friends__List__Friends__Box__left">
                                     <div class="friends__List__Friends__Box__left__Img song"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">송정모</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name">정모</div>
                                         <div class="friends__List__Friends__Box__left__Friend__state">나는야 골프왕</div>
                                     </div>
                                 </div>
