--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <div class="chats__list__chatbox__left">
                                     <div class="chats__list__chatbox__left__img usernum1"></div>
                                     <div class="chats__list__chatbox__left__user">
-                                        <div class="chats__list__chatbox__left__user__name">박영미</div>
+                                        <div class="chats__list__chatbox__left__user__name">영미</div>
                                         <div class="chats__list__chatbox__left__user__content">ㅎㅎㅎㅎㅎ</div>
                                     </div>
                                 </div>
@@ -74,8 +74,8 @@
                                 <div class="chats__list__chatbox__left">
                                     <div class="chats__list__chatbox__left__img usernum2"></div>
                                     <div class="chats__list__chatbox__left__user">
-                                        <div class="chats__list__chatbox__left__user__name">배건수</div>
-                                        <div class="chats__list__chatbox__left__user__content">회사다...</div>
+                                        <div class="chats__list__chatbox__left__user__name">건수</div>
+                                        <div class="chats__list__chatbox__left__user__content">아직 퇴근 못 했다..</div>
                                     </div>
                                 </div>
                                 <div class="chats__list__chatbox__right">
@@ -90,7 +90,7 @@
                                 <div class="chats__list__chatbox__left">
                                     <div class="chats__list__chatbox__left__img usernum3"></div>
                                     <div class="chats__list__chatbox__left__user">
-                                        <div class="chats__list__chatbox__left__user__name">송정모</div>
+                                        <div class="chats__list__chatbox__left__user__name">정모</div>
                                         <div class="chats__list__chatbox__left__user__content">롤 ㄱ??</div>
                                     </div>
                                 </div>
@@ -106,8 +106,8 @@
                                 <div class="chats__list__chatbox__left">
                                     <div class="chats__list__chatbox__left__img usernum4"></div>
                                     <div class="chats__list__chatbox__left__user">
-                                        <div class="chats__list__chatbox__left__user__name">장원우</div>
-                                        <div class="chats__list__chatbox__left__user__content">회 ㄱ??</div>
+                                        <div class="chats__list__chatbox__left__user__name">원우</div>
+                                        <div class="chats__list__chatbox__left__user__content">오늘 회한접시 할까~~~~</div>
                                     </div>
                                 </div>
                                 <div class="chats__list__chatbox__right">
@@ -122,8 +122,8 @@
                                 <div class="chats__list__chatbox__left">
                                     <div class="chats__list__chatbox__left__img usernum5"></div>
                                     <div class="chats__list__chatbox__left__user">
-                                        <div class="chats__list__chatbox__left__user__name">오병윤</div>
-                                        <div class="chats__list__chatbox__left__user__content">어쩌라고</div>
+                                        <div class="chats__list__chatbox__left__user__name">병윤</div>
+                                        <div class="chats__list__chatbox__left__user__content">ㅇㅋㅇㅋ</div>
                                     </div>
                                 </div>
                                 <div class="chats__list__chatbox__right">
@@ -138,8 +138,8 @@
                                 <div class="chats__list__chatbox__left">
                                     <div class="chats__list__chatbox__left__img usernum6"></div>
                                     <div class="chats__list__chatbox__left__user">
-                                        <div class="chats__list__chatbox__left__user__name">이하늘</div>
-                                        <div class="chats__list__chatbox__left__user__content">뭐하냐</div>
+                                        <div class="chats__list__chatbox__left__user__name">하늘</div>
+                                        <div class="chats__list__chatbox__left__user__content">ㅇㅋ 걸어</div>
                                     </div>
                                 </div>
                                 <div class="chats__list__chatbox__right">
@@ -149,23 +149,23 @@
                         </a>
                     </div>
                     <div class="chats__list__singlechat">
-                        <a href="chat__7.html">
-                            <div class="chats__list___chatbox">
-                                <div class="chats__list__chatbox__left">
-                                    <div class="chats__list__chatbox__left__img usernum7"></div>
-                                    <div class="chats__list__chatbox__left__user">
-                                        <div class="chats__list__chatbox__left__user__name">홍상현</div>
-                                        <div class="chats__list__chatbox__left__user__content">주짓수가 최고!
-                                            <div class="chats__list__chatbox__left__user__countNum">1</div>
 
-                                        </div>
+                        <div class="chats__list___chatbox">
+                            <div class="chats__list__chatbox__left">
+                                <div class="chats__list__chatbox__left__img usernum7"></div>
+                                <div class="chats__list__chatbox__left__user">
+                                    <div class="chats__list__chatbox__left__user__name">상현</div>
+                                    <div class="chats__list__chatbox__left__user__content">주짓수가 최고!
+                                        <div class="chats__list__chatbox__left__user__countNum">1</div>
+
                                     </div>
                                 </div>
-                                <div class="chats__list__chatbox__right">
-                                    <div class="chats__list__chatbox__right__timestamp">오전 9:45</div>
-                                </div>
                             </div>
-                        </a>
+                            <div class="chats__list__chatbox__right">
+                                <div class="chats__list__chatbox__right__timestamp">오전 9:45</div>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
