--- a/more.html
+++ b/more.html
@@ -45,7 +45,9 @@
                 <div class="More-bar__Icon">
                     <i class="fas fa-search"></i>
                     <i class="fas fa-qrcode"></i>
-                    <i class="fas fa-cog"></i>
+                    <a href="settings.html">
+                        <i class="fas fa-cog"></i>
+                    </a>
                 </div>
             </div>
 
