--- a/chat__2.html
+++ b/chat__2.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="Sendmessage__Friend">
                         <div class="Sendmessage__Friend__receive">
-                            <div class="Sendmessage__Friend__receive__left"></div>
+                            <div class="Sendmessage__Friend__receive__left bae"></div>
                             <div class="Sendmessage__Friend__receive__right">
                                 <div class="Sendmessage__Friend__receive__right__message">
                                     <div class="Sendmessage__Friend__receive__right__message__message">없지 ㅇㅇ 퇴근하고 볼까?
@@ -84,7 +84,7 @@
                     </div>
                     <div class="Sendmessage__Friend">
                         <div class="Sendmessage__Friend__receive">
-                            <div class="Sendmessage__Friend__receive__left"></div>
+                            <div class="Sendmessage__Friend__receive__left bae"></div>
                             <div class="Sendmessage__Friend__receive__right">
                                 <div class="Sendmessage__Friend__receive__right__message">
                                     <div class="Sendmessage__Friend__receive__right__message__message">아직 퇴근 못 했다..
