--- a/chat__5.html
+++ b/chat__5.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="Sendmessage__Friend">
                         <div class="Sendmessage__Friend__receive">
-                            <div class="Sendmessage__Friend__receive__left"></div>
+                            <div class="Sendmessage__Friend__receive__left bang"></div>
                             <div class="Sendmessage__Friend__receive__right">
                                 <div class="Sendmessage__Friend__receive__right__message">
                                     <div class="Sendmessage__Friend__receive__right__message__message">가게 일 돕는중
