--- a/find.html
+++ b/find.html
@@ -167,7 +167,7 @@
                         <i class="far fa-comments"></i>
                     </a>
                 </div>
-                <div class='nav-bar__Icon'>
+                <div class='nav-bar__Icon  nowChoice-find'>
                     <a href="find.html">
                         <i class="fas fa-search fa-2x"></i>
                     </a>
