--- a/friends.html
+++ b/friends.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>친구목록</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/chat__2-room.css">
+    <link rel="stylesheet" href="css/chat__1-room.css">
     <script src="https://kit.fontawesome.com/b97968ecfe.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Sunflower:300,700&display=swap&subset=korean" rel="stylesheet">
     <style type="text/css">
@@ -72,7 +74,7 @@
                         <div class="friends__List__OnePerson">
                             <div class="friends__List__Friends__Box">
                                 <div class="friends__List__Friends__Box__left">
-                                    <div class="friends__List__Friends__Box__left__Img girlfriend"></div>
+                                    <div class="friends__List__Friends__Box__left__Img young"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
                                         <div class="friends__List__Friends__Box__left__Friend__Name">영미</div>
                                         <div class="friends__List__Friends__Box__left__Friend__state">퇴사하자 (D-32)</div>
@@ -109,6 +111,7 @@
 
                             </div>
                         </div>
+
                     </div>
 
                 </div>
@@ -116,7 +119,7 @@
 
 
             <div class="nav-bar">
-                <div class='nav-bar__Icon'>
+                <div class='nav-bar__Icon nowChoice-friends'>
                     <a href="friends.html">
                         <i class="fas fa-user fa-2x"></i>
                     </a>
