--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
                         <i class="far fa-user"></i>
                     </a>
                 </div>
-                <div class='nav-bar__Icon'>
+                <div class='nav-bar__Icon NewComment nowChoice-index'>
                     <a href="index.html">
                         <i class="fas fa-comments fa-2x"></i>
                     </a>
+                    <span class="new-message">1</span>
                 </div>
                 <div class='nav-bar__Icon'>
                     <a href="find.html">
