--- a/chat__3.html
+++ b/chat__3.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="Sendmessage__Friend">
                         <div class="Sendmessage__Friend__receive">
-                            <div class="Sendmessage__Friend__receive__left"></div>
+                            <div class="Sendmessage__Friend__receive__left song"></div>
                             <div class="Sendmessage__Friend__receive__right">
                                 <div class="Sendmessage__Friend__receive__right__message">
                                     <div class="Sendmessage__Friend__receive__right__message__message">롤 ㄱ?
