--- a/chat__4.html
+++ b/chat__4.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="Sendmessage__Friend">
                         <div class="Sendmessage__Friend__receive">
-                            <div class="Sendmessage__Friend__receive__left"></div>
+                            <div class="Sendmessage__Friend__receive__left won"></div>
                             <div class="Sendmessage__Friend__receive__right">
                                 <div class="Sendmessage__Friend__receive__right__message">
                                     <div class="Sendmessage__Friend__receive__right__message__message">여자친구 만나고 헤어지는 중
