--- a/chat__6.html
+++ b/chat__6.html
@@ -60,7 +60,7 @@
 
                     <div class="Sendmessage__Friend">
                         <div class="Sendmessage__Friend__receive">
-                            <div class="Sendmessage__Friend__receive__left"></div>
+                            <div class="Sendmessage__Friend__receive__left E"></div>
                             <div class="Sendmessage__Friend__receive__right">
                                 <div class="Sendmessage__Friend__receive__right__message">
                                     <div class="Sendmessage__Friend__receive__right__message__message">전화가능?
