--- a/more.html
+++ b/more.html
@@ -45,7 +45,7 @@
                 <div class="More-bar__Icon">
                     <i class="fas fa-search"></i>
                     <i class="fas fa-qrcode"></i>
-                    <a href="settings.html">
+                    <a href="settings.html" class='cog'>
                         <i class="fas fa-cog"></i>
                     </a>
                 </div>
@@ -116,7 +116,7 @@
                         <i class="fas fa-search"></i>
                     </a>
                 </div>
-                <div class='nav-bar__Icon'>
+                <div class='nav-bar__Icon  nowChoice-more'>
                     <a href="more.html">
                         <i class="fas fa-ellipsis-h fa-2x">
                         </i>
