--- a/friends.html
+++ b/friends.html
@@ -70,13 +70,26 @@
                     </div>
 
                     <div class="friends__List__Friends">
+
+
+
                         <div class="friends__List__Friends__title">Friends 100</div>
                         <div class="friends__List__OnePerson">
+
                             <div class="friends__List__Friends__Box">
-                                <div class="friends__List__Friends__Box__left">
+                                <div class="friends__List__Friends__Box__left temp__young">
                                     <div class="friends__List__Friends__Box__left__Img young"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">영미</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name">영미
+                                            <div class="Hidden__profile Hidden__young">
+                                                <div class="Hidden__profile__Img__young"></div>
+                                                <div class="Hidden__profile__Name">영미</div>
+                                                <div class="Hidden__profile__Icon">
+                                                    <i class="far fa-comment"></i>
+                                                    <i class="fas fa-phone-alt"></i>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="friends__List__Friends__Box__left__Friend__state">퇴사하자 (D-32)</div>
                                     </div>
                                 </div>
@@ -87,10 +100,19 @@
                         </div>
                         <div class="friends__List__OnePerson">
                             <div class="friends__List__Friends__Box">
-                                <div class="friends__List__Friends__Box__left">
+                                <div class="friends__List__Friends__Box__left temp__song">
                                     <div class="friends__List__Friends__Box__left__Img song"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">정모</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name">정모
+                                            <div class="Hidden__profile Hidden__song">
+                                                <div class="Hidden__profile__Img__song"></div>
+                                                <div class="Hidden__profile__Name">정모</div>
+                                                <div class="Hidden__profile__Icon">
+                                                    <i class="far fa-comment"></i>
+                                                    <i class="fas fa-phone-alt"></i>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="friends__List__Friends__Box__left__Friend__state">나는야 골프왕</div>
                                     </div>
                                 </div>
@@ -100,10 +122,19 @@
 
                         <div class="friends__List__OnePerson">
                             <div class="friends__List__Friends__Box">
-                                <div class="friends__List__Friends__Box__left">
+                                <div class="friends__List__Friends__Box__left temp__won">
                                     <div class="friends__List__Friends__Box__left__Img won"></div>
                                     <div class="friends__List__Friends__Box__left__Friend">
-                                        <div class="friends__List__Friends__Box__left__Friend__Name">원우</div>
+                                        <div class="friends__List__Friends__Box__left__Friend__Name">원우
+                                            <div class="Hidden__profile Hidden__won">
+                                                <div class="Hidden__profile__Img__won"></div>
+                                                <div class="Hidden__profile__Name">원우</div>
+                                                <div class="Hidden__profile__Icon">
+                                                    <i class="far fa-comment"></i>
+                                                    <i class="fas fa-phone-alt"></i>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="friends__List__Friends__Box__left__Friend__state">졸업하자...</div>
                                     </div>
                                 </div>
