--- a/settings.html
+++ b/settings.html
@@ -130,6 +130,9 @@
 
         </div>
     </div>
+    <div class="myScreen">
+        <span class="myScreen__text">높이를 조절하세요! 너무 작습니다!</span>
+    </div>
 </body>
 
 </html>
