--- a/friends.html
+++ b/friends.html
@@ -174,6 +174,9 @@
             </div>
         </div>
     </div>
+    <div class="myScreen">
+        <span class="myScreen__text">높이를 조절하세요! 너무 작습니다!</span>
+    </div>
 </body>
 
 </html>
