--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
                 </div>
             </div>
         </div>
+
+    </div>
+    <div class="myScreen">
+        <span class="myScreen__text">높이를 조절하세요! 너무 작습니다!</span>
     </div>
 </body>
 
